got spacing correct fixed sidebar entry. need to get the clicks to work on the verses

--- a/style.css
+++ b/style.css
@@ -23,19 +23,7 @@ body {
   color: rgb(78, 78, 78);
   line-height: normal;
 }
-.app_menu {
-  position: absolute;
-  max-width: 100%;
-  width: 100%;
-  height: 100%;
-  max-height: 100vh;
-  top: 0;
-  right: 0;
-  background: #fffffff1;
-  z-index: 9999;
-  opacity: 1;
-  transition: all 250ms ease-in;
-}
+
 /* menu items */
 .info{
     width: 100%;
@@ -57,16 +45,35 @@ body {
   width: 60px;
   font-size: 25px;
   border-radius: 100%;
-  z-index: 99;
+  z-index: 9999;
   color: white;
   background-color: rgb(0, 0, 0);
   opacity: 0.3;
 }
-
+.close{
+  z-index: 999;
+}
+.open{
+  position: fixed;
+  z-index: 99;
+}
+.app_menu {
+  position: absolute;
+  max-width: 100vw;
+  width: 1000%;
+  height: 100vh;
+  /* height: 100%; */
+  top: 0;
+  right: 0;
+  background: #fffffff1;
+  z-index: 9999;
+  opacity: 1;
+  transition: all 250ms ease-in;
+}
 .app_menu_close {
     /* width: 0; */
     position: absolute;
-    height: 100%;
+    height: 100vh;
     max-width: 0;
     right: 0;
     top: 0;
@@ -88,7 +95,7 @@ body {
     background-color: #505050;
 }
 .toggler{
-    position: relative;
+    position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -104,11 +111,11 @@ body {
   display: none;
 }
 .toggle_active{
-  position: relative;
+  position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
-    right: 0px;
+    right: -3px;
     height: 28px;
     width: 28px;
     border-radius: 100%;
@@ -118,15 +125,7 @@ body {
 }
 /* END toggle btn */
 /* END menu items */
-.menu_cont{
-    height: 100vh;
-    width: 100%;
-    background: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 99;
-}
+
 .bible_read_body {
   line-height: 1.5;
   text-align: center;
